--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.14",
     "@syncfusion/ej2-react-dropdowns": "^25.1.37",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
